tests/snapshots/examples_fixtures/aether__reuse_alias_spines.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/reuse_alias_spines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
