tests/snapshots/examples_fixtures/aether__reuse_specialization.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/reuse_specialization.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
