tests/snapshots/examples_fixtures/aether__tree_updates.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/aether/tree_updates.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
