tests/snapshots/examples_fixtures/aether__verify_aether.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/verify_aether.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
